[tool.poetry]
name = "pydts"
version = "0.4.5"
description = "Discrete time survival analysis with competing risks"
authors = ["Tomer Meir <tomer1812@gmail.com>", "Rom Gutman <rom.gutman1@gmail.com>", "Malka Gorfine <malkago12@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"
homepage = "https://github.com/tomer1812/pydts"
repository = "https://github.com/tomer1812/pydts"
keywords = ["Discrete Time", "Time to Event" ,"Survival Analysis", "Competing Events"]
documentation = "https://tomer1812.github.io/pydts"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.1"
mkdocs = "^1.2.3"
mkdocs-material = "^8.2.4"
mknotebooks = "^0.7.1"
mkdocstrings = "^0.18.1"
lifelines = "^0.26.4"
scipy = "^1.8.0"
scikit-learn = "^1.0.2"
tqdm = "^4.63.0"
statsmodels = "^0.13.2"
pandarallel = "^1.5.7"
ipython = "^8.2.0"
numpy = ">=1.23.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = {extras = ["toml"], version = "^6.3.2"}
pytest-cov = "^3.0.0"
mkdocs = "^1.2.3"
mkdocs-material = "^8.2.4"
mknotebooks = "^0.7.1"
mkdocstrings = "^0.18.1"
jupyter = "^1.0.0"
seaborn = "^0.11.2"
scikit-survival = "^0.17.1"
tableone = "^0.7.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pydts"]

[tool.coverage.report]
show_missing = true
