[tool.poetry]
name = "pydts"
version = "0.9.11"
description = "Discrete time survival analysis with competing risks"
authors = ["Tomer Meir <tomer1812@gmail.com>", "Rom Gutman <rom.gutman1@gmail.com>", "Malka Gorfine <malkago12@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"
homepage = "https://github.com/tomer1812/pydts"
repository = "https://github.com/tomer1812/pydts"
keywords = ["Discrete Time", "Time to Event" ,"Survival Analysis", "Competing Events"]
documentation = "https://tomer1812.github.io/pydts"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"

# NumPy varies by Python version
numpy = [
  { version = ">=1.26,<2.1", python = ">=3.9,<3.10" },   # Py3.9: allow 1.26–2.0.x
  { version = ">=1.26,<2.3", python = ">=3.10,<3.11" },  # Py3.10: allow up to 2.2.x
  { version = ">=1.26",       python = ">=3.11,<3.14" }  # Py3.11–3.13: 1.26+ incl. 2.1–2.3.x
]

# SciPy varies by Python version
scipy = [
  { version = ">=1.13,<1.14", python = ">=3.9,<3.10" },   # Py3.9
  { version = ">=1.14,<1.16", python = ">=3.10,<3.11" },  # Py3.10 (1.16+ drops 3.10)
  { version = ">=1.15",       python = ">=3.11,<3.14" }   # Py3.11–3.13
]

# The rest can be simple lower-bounds
pandas        = ">=2.2.2"     # first generally compatible with NumPy 2.0
scikit-learn  = ">=1.6"       # supports Py 3.9–3.13
statsmodels   = ">=0.14.2"    # NumPy 2 compatibility
lifelines     = ">=0.27"
tqdm          = ">=4.66"
psutil        = ">=5.9"
seaborn       = ">=0.13"
formulaic = ">=1.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=8.4"
pytest-cov = ">=6.2"
coverage = { version = ">=7.5,<8", extras = ["toml"] }  # optional but useful


[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6,<2"
mkdocs-material = ">=9.6,<10"
mkdocstrings = ">=0.30"
mkdocstrings-python = ">=1.18"
mknotebooks = ">=0.8"
jupyter = ">=1.1"  # only if you actually build docs from notebooks


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
# Map equivalent source locations across local src installs and wheel/venv installs.
source = [
  "src",
  ".venv/*/site-packages",
  ".tox/*/site-packages",
  "*/site-packages"        # keep your wildcard as a last-resort catch-all
]

[tool.coverage.run]
branch = true
source = ["pydts"]
parallel = true             # if you run tests in a matrix and combine results
# omit = ["tests/*", "docs/*", "setup.py"]   # optional

[tool.coverage.report]
show_missing = true
